# video-chunker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
video_chunker/: __init__.py  analyzer.py  cli.py  splitter.py  transcriber.py  utils.py
